fixed new images, made more info page more readable

--- a/src/pages/MoreInfo/MoreInfo.css
+++ b/src/pages/MoreInfo/MoreInfo.css
@@ -10,13 +10,13 @@
   color: white;
   max-width: 50%;
   padding: 20px;
-  background-color: rgba(0, 0, 0, 0.63);
+  background-color: rgba(0, 0, 0, 0.85);
 }
 
 .right {
   color: white;
   padding: 20px;
-  background-color: rgba(0, 0, 0, 0.63);
+  background-color: rgba(0, 0, 0, 0.85);
 }
 #agent-portrait {
   max-width: 100%;
@@ -38,7 +38,7 @@
 
 #stat-container {
   color: white;
-  background-color: rgba(0, 0, 0, 0.63);
+  background-color: rgba(0, 0, 0, 0.85);
   margin: 20px 40px;
 }
 
@@ -53,6 +53,7 @@
 
 #result-container {
   padding-top: 10px;
+  opacity: 100%;
 }
 
 #moreInfo-backButton {
